# hmsx

./: .gitignore  CMakeLists.txt  README.md
Common/AntiSpam/: AntiSpamConfiguration.cpp  AntiSpamConfiguration.h  SURBL.cpp  SURBL.h  SpamProtection.cpp  SpamProtection.h  SpamTest.cpp  SpamTest.h  SpamTestDNSBlackLists.cpp  SpamTestDNSBlackLists.h  SpamTestData.cpp  SpamTestData.h  SpamTestHeloHost.cpp  SpamTestHeloHost.h  SpamTestMXRecords.cpp  SpamTestMXRecords.h  SpamTestPTR.cpp  SpamTestPTR.h  SpamTestResult.cpp  SpamTestResult.h  SpamTestRunner.cpp  SpamTestRunner.h  SpamTestSPF.cpp  SpamTestSPF.h  SpamTestSURBL.cpp  SpamTestSURBL.h  SpamTestSpamAssassin.cpp  SpamTestSpamAssassin.h  WhiteListCache.cpp  WhiteListCache.h
Common/AntiVirus/: AntiVirusConfiguration.cpp  AntiVirusConfiguration.h  ClamAVVirusScanner.cpp  ClamAVVirusScanner.h  ClamWinVirusScanner.cpp  ClamWinVirusScanner.h  CustomVirusScanner.cpp  CustomVirusScanner.h  VirusScanner.cpp  VirusScanner.h  VirusScannerTester.cpp  VirusScannerTester.h  VirusScanningResult.cpp  VirusScanningResult.h
Common/Application/: ACLManager.cpp  ACLManager.h  Application.cpp  Application.h  Configuration.cpp  Configuration.h  Constants.h  DefaultDomain.cpp  DefaultDomain.h  Dictionary.cpp  Dictionary.h  ErrorManager.cpp  ErrorManager.h  ExceptionHandler.cpp  ExceptionHandler.h  FolderManager.cpp  FolderManager.h  IniFileSettings.cpp  IniFileSettings.h  Logger.cpp  Logger.h  MessageIndexer.cpp  MessageIndexer.h  ObjectCache.cpp  ObjectCache.h  Property.cpp  Property.h  PropertySet.cpp  PropertySet.h  Reinitializator.cpp  RemoveExpiredRecords.cpp  RemoveExpiredRecords.h  Scheduler.cpp  Scheduler.h  SessionManager.cpp  SessionManager.h  TimeoutCalculator.cpp  TimeoutCalculator.h
Common/BO/: ACLPermission.cpp  ACLPermission.h  ACLPermissions.cpp  ACLPermissions.h  Account.cpp  Account.h  Accounts.cpp  Accounts.h  Alias.cpp  Alias.h  Aliases.cpp  Aliases.h  Attachment.cpp  Attachment.h  Attachments.cpp  Attachments.h  BlockedAttachment.cpp  BlockedAttachment.h  BlockedAttachments.cpp  BlockedAttachments.h  BusinessObject.h  Collection.h  DNSBlackList.cpp  DNSBlackList.h  DNSBlackLists.cpp  DNSBlackLists.h  DistributionList.cpp  DistributionList.h  DistributionListRecipient.cpp  DistributionListRecipient.h  DistributionListRecipients.cpp  DistributionListRecipients.h  DistributionLists.cpp  DistributionLists.h  Domain.cpp  Domain.h  DomainAlias.cpp  DomainAlias.h  DomainAliases.cpp  DomainAliases.h  (+89 more)
Common/Cache/: AccountSizeCache.cpp  AccountSizeCache.h  Cache.h  CacheConfiguration.cpp  CacheConfiguration.h  CacheContainer.cpp  CacheContainer.h  CacheReaderWithDbFallback.h  CachedMessages.h  CachedObject.h  InboxIDCache.cpp  InboxIDCache.h  MessageCache.cpp  MessageCache.h
Common/Mime/: CodePages.cpp  Mime.cpp  Mime.h  MimeChar.cpp  MimeCode.cpp  MimeCode.h  MimeTester.cpp  MimeTester.h  MimeType.cpp
Common/Persistence/: NameChanger.cpp  NameChanger.h  PersistenceMode.h  PersistentACLPermission.cpp  PersistentACLPermission.h  PersistentAccount.cpp  PersistentAccount.h  PersistentAlias.cpp  PersistentAlias.h  PersistentBlockedAttachment.cpp  PersistentBlockedAttachment.h  PersistentDNSBlacklist.cpp  PersistentDNSBlacklist.h  PersistentDistributionList.cpp  PersistentDistributionList.h  PersistentDistributionListRecipient.cpp  PersistentDomain.cpp  (+52 more)
Docs/: vs_path_settings.txt
Examples/: hmsx_c#.net_remote_call.cs  hmsx_delphi_remote_call.pas  hmsx_embacadero_cbuilder_remote_call.cpp  hmsx_freepascal_remote_call.pas  hmsx_gcc_remote_call.c  hmsx_java_remote_call.java  hmsx_lua_remote_call.lua  hmsx_mingw_remote_call.c  hmsx_msvc_remote_call.c  hmsx_nodejs_remote_call.js  hmsx_perl_remote_call.pl  hmsx_php_remote_call.php  hmsx_powershell_remote_call.ps1  hmsx_python_remote_call.py  hmsx_vb.net_remote_call.vb  hmsx_vb_script_remote_call.vbs
ExternalFetcher/: ExternalFetch.cpp  ExternalFetch.h  ExternalFetchManager.cpp  ExternalFetchManager.h  ExternalFetchTask.cpp  ExternalFetchTask.h  FetchAccountUIDList.cpp  FetchAccountUIDList.h  POP3ClientConnection.cpp  POP3ClientConnection.h
IMAP/: FolderListCreator.cpp  FolderListCreator.h  IMAPACLHelper.cpp  IMAPACLHelper.h  IMAPCommand.cpp  IMAPCommand.h  IMAPCommandAppend.cpp  IMAPCommandAppend.h  IMAPCommandAuthenticate.cpp  IMAPCommandAuthenticate.h  IMAPCommandCapability.cpp  IMAPCommandCapability.h  IMAPCommandCheck.cpp  IMAPCommandCheck.h  IMAPCommandClose.cpp  IMAPCommandClose.h  IMAPCommandCopy.cpp  IMAPCommandCopy.h  IMAPCommandCreate.cpp  IMAPCommandCreate.h  IMAPCommandDelete.cpp  IMAPCommandDelete.h  IMAPCommandDeleteAcl.cpp  IMAPCommandDeleteAcl.h  IMAPCommandExamine.cpp  IMAPCommandExamine.h  IMAPCommandExpunge.cpp  IMAPCommandExpunge.h  IMAPCommandFetch.cpp  IMAPCommandFetch.h  IMAPCommandGetAcl.cpp  IMAPCommandGetAcl.h  IMAPCommandGetQuota.cpp  IMAPCommandGetQuota.h  IMAPCommandGetQuotaRoot.cpp  IMAPCommandGetQuotaRoot.h  IMAPCommandIdle.cpp  IMAPCommandIdle.h  IMAPCommandLSUB.CPP  IMAPCommandLSUB.h  (+68 more)
POP3/: POP3Configuration.cpp  POP3Configuration.h  POP3Connection.cpp  POP3Connection.h  POP3Sessions.cpp  POP3Sessions.h
SMTP/: BLCheck.cpp  DeliveryQueue.cpp  DeliveryQueue.h  DeliveryTask.cpp  DeliveryTask.h  ExternalDelivery.cpp  ExternalDelivery.h  ExternalDeliveryServerResult.h  GreyListCleanerTask.cpp  GreyListCleanerTask.h  GreyListing.cpp  GreyListing.h  LocalDelivery.cpp  LocalDelivery.h  MirrorMessage.cpp  MirrorMessage.h  PlusAddressing.cpp  PlusAddressing.h  RecipientParser.cpp  RecipientParser.h  RuleApplier.cpp  RuleApplier.h  RuleResult.cpp  RuleResult.h  SMTPClientConnection.cpp  SMTPClientConnection.h  SMTPConfiguration.cpp  SMTPConnection.cpp  SMTPConnection.h  SMTPDeliverer.cpp  SMTPDeliverer.h  SMTPDeliveryManager.cpp  SMTPForwarding.cpp  SMTPForwarding.h  SMTPMessageHeaderCreator.cpp  SMTPMessageHeaderCreator.h  SMTPVacationMessageCreator.cpp  SMTPVacationMessageCreator.h  SMTPVirusNotifier.cpp  SMTPVirusNotifier.h  (+2 more)
SQL/: hmailpg.sql
Start/: cert.pem  cmake_pch.cxx  hMailServer.cpp  hMailServer.sln  hMailServer.vcxproj  key.pem  pch.cpp  pch.h
(+204 files in other folders)
