# CMake project for hMSX

cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("hMailServerX")


set(CMAKE_CXX_STANDARD 14)

# Set the path to your custom OpenSSL installation
set(OPENSSL_ROOT_DIR "../hMailLibs/msvc/v143/x86_64/openssl")

# Find OpenSSL package
find_package(OpenSSL REQUIRED)


# Set the path to your custom BOOST Framework
set(BOOST_ROOT "../hMailLibs/msvc/v143/x86_64/boost_1_83_0")

# Find BOOST package
find_package(Boost REQUIRED COMPONENTS thread)


# List of Header files
set(HEADER_FILES       
    "Common/AntiSpam/AntiSpamConfiguration.h"   
    "Common/AntiSpam/DKIM/Canonicalization.h"   
    "Common/AntiSpam/DKIM/DKIM.h"   
    "Common/AntiSpam/DKIM/DKIMParameters.h"
    "Common/AntiSpam/DKIM/DKIMSigner.h"
    "Common/AntiSpam/DKIM/SpamTestDKIM.h"
    "Common/AntiSpam/SpamAssassin/SpamAssassinClient.h"
    "Common/AntiSpam/SpamAssassin/SpamAssassinTestConnect.h"
    "Common/AntiSpam/SpamProtection.h"
    "Common/AntiSpam/SpamTest.h"
    "Common/AntiSpam/SpamTestData.h"
    "Common/AntiSpam/SpamTestDNSBlackLists.h"
    "Common/AntiSpam/SpamTestHeloHost.h"
    "Common/AntiSpam/SpamTestMXRecords.h"
    "Common/AntiSpam/SpamTestPTR.h"
    "Common/AntiSpam/SpamTestResult.h"
    "Common/AntiSpam/SpamTestRunner.h"
    "Common/AntiSpam/SpamTestSpamAssassin.h"
    "Common/AntiSpam/SpamTestSPF.h"
    "Common/AntiSpam/SpamTestSURBL.h"
    "Common/AntiSpam/SURBL.h"
    "Common/AntiSpam/WhiteListCache.h"
    "Common/AntiVirus/AntiVirusConfiguration.h"
    "Common/AntiVirus/ClamAVVirusScanner.h"
    "Common/AntiVirus/ClamWinVirusScanner.h"
    "Common/AntiVirus/CustomVirusScanner.h"
    "Common/AntiVirus/VirusScanner.h"
    "Common/AntiVirus/VirusScannerTester.h"
    "Common/AntiVirus/VirusScanningResult.h"
    "Common/Application/ACLManager.h"
    "Common/Application/Application.h"
    "Common/Application/Configuration.h"
    "Common/Application/Constants.h"
    "Common/Application/DefaultDomain.h"
    "Common/Application/Dictionary.h"
    "Common/Application/ErrorManager.h"
    "Common/Application/ExceptionHandler.h"
    "Common/Application/FolderManager.h"
    "Common/Application/IniFileSettings.h"
    "Common/Application/Logger.h"
    "Common/Application/MessageIndexer.h"
    "Common/Application/ObjectCache.h"
    "Common/Application/Property.h"
    "Common/Application/PropertySet.h"
    "Common/Application/Reinitializator.h"
    "Common/Application/RemoveExpiredRecords.h"
    "Common/Application/Scheduler.h"
    "Common/Application/SessionManager.h"
    "Common/Application/TimeoutCalculator.h"
    "Common/BO/Account.h"
    "Common/BO/Accounts.h"
    "Common/BO/ACLPermission.h"
    "Common/BO/ACLPermissions.h"
    "Common/BO/Alias.h"
    "Common/BO/Aliases.h"
    "Common/BO/Attachment.h"
    "Common/BO/Attachments.h"
    "Common/BO/BlockedAttachment.h"
    "Common/BO/BlockedAttachments.h"
    "Common/BO/BusinessObject.h"
    "Common/BO/Collection.h"
    "Common/BO/DistributionList.h"
    "Common/BO/DistributionListRecipient.h"
    "Common/BO/DistributionListRecipients.h"
    "Common/BO/DistributionLists.h"
    "Common/BO/DNSBlackList.h"
    "Common/BO/DNSBlackLists.h"
    "Common/BO/Domain.h"
    "Common/BO/DomainAlias.h"
    "Common/BO/DomainAliases.h"
    "Common/BO/Domains.h"
    "Common/BO/FetchAccounts.h"
    "Common/BO/FetchAccountUID.h"
    "Common/BO/FetchAccountUIDs.h"
    "Common/BO/GreyListingWhiteAddress.h"
    "Common/BO/GreyListingWhiteAddresses.h"
    "Common/BO/GreyListTriplet.h"
    "Common/BO/Group.h"
    "Common/BO/GroupMember.h"
    "Common/BO/GroupMembers.h"
    "Common/BO/Groups.h"
    "Common/BO/IMAPFolder.h"
    "Common/BO/IMAPFolders.h"
    "Common/BO/IncomingRelay.h"
    "Common/BO/IncomingRelays.h"
    "Common/BO/init_account.h"
    "Common/BO/Message.h"
    "Common/BO/MessageData.h"
    "Common/BO/MessageMetaData.h"
    "Common/BO/MessageRecipient.h"
    "Common/BO/MessageRecipients.h"
    "Common/BO/Messages.h"
    "Common/BO/Route.h"
    "Common/BO/RouteAddress.h"
    "Common/BO/RouteAddresses.h"
    "Common/BO/Routes.h"
    "Common/BO/Rule.h"
    "Common/BO/RuleAction.h"
    "Common/BO/RuleActions.h"
    "Common/BO/RuleCriteria.h"
    "Common/BO/RuleCriterias.h"
    "Common/BO/Rules.h"
    "Common/BO/ScheduledTask.h"
    "Common/BO/SecurityRange.h"
    "Common/BO/SecurityRanges.h"
    "Common/BO/ServerMessage.h"
    "Common/BO/ServerMessages.h"
    "Common/BO/SSLCertificate.h"
    "Common/BO/SSLCertificates.h"
    "Common/BO/SURBLServer.h"
    "Common/BO/SURBLServers.h"
    "Common/BO/TCPIPPort.h"
    "Common/BO/TCPIPPorts.h"
    "Common/BO/WhiteListAddress.h"
    "Common/BO/WhiteListAddresses.h"
    "Common/Cache/AccountSizeCache.h"
    "Common/Cache/Cache.h"
    "Common/Cache/CacheConfiguration.h"
    "Common/Cache/CacheContainer.h"
    "Common/Cache/CachedMessages.h"
    "Common/Cache/CachedObject.h"
    "Common/Cache/CacheReaderWithDbFallback.h"
    "Common/Cache/InboxIDCache.h"
    "Common/Cache/MessageCache.h"
    "Common/Mime/CodePages.h"
    "Common/Mime/Mime.h"
    "Common/Mime/MimeChar.h"
    "Common/Mime/MimeCode.h"
    "Common/Mime/MimeTester.h"
    "Common/Persistence/Maintenance/Maintenance.h"
    "Common/Persistence/NameChanger.h"
    "Common/Persistence/PersistenceMode.h"
    "Common/Persistence/PersistentAccount.h"
    "Common/Persistence/PersistentACLPermission.h"
    "Common/Persistence/PersistentAlias.h"
    "Common/Persistence/PersistentBlockedAttachment.h"
    "Common/Persistence/PersistentDistributionList.h"
    "Common/Persistence/PersistentDistributionListRecipient.h"
    "Common/Persistence/PersistentDNSBlacklist.h"
    "Common/Persistence/PersistentDomain.h"
    "Common/Persistence/PersistentDomainAlias.h"
    "Common/Persistence/PersistentFetchAccount.h"
    "Common/Persistence/PersistentFetchAccountUID.h"
    "Common/Persistence/PersistentGreyList.h"
    "Common/Persistence/PersistentGreyListingWhiteAddress.h"
    "Common/Persistence/PersistentGroup.h"
    "Common/Persistence/PersistentGroupMember.h"
    "Common/Persistence/PersistentIMAPFolder.h"
    "Common/Persistence/PersistentIncomingRelay.h"
    "Common/Persistence/PersistentLogonFailure.h"
    "Common/Persistence/PersistentMessage.h"
    "Common/Persistence/PersistentMessageMetaData.h"
    "Common/Persistence/PersistentMessageRecipient.h"
    "Common/Persistence/PersistentRoute.h"
    "Common/Persistence/PersistentRouteAddress.h"
    "Common/Persistence/PersistentRule.h"
    "Common/Persistence/PersistentRuleAction.h"
    "Common/Persistence/PersistentRuleCriteria.h"
    "Common/Persistence/PersistentSecurityRange.h"
    "Common/Persistence/PersistentServerMessage.h"
    "Common/Persistence/PersistentSSLCertificate.h"
    "Common/Persistence/PersistentSURBLServer.h"
    "Common/Persistence/PersistentTCPIPPort.h"
    "Common/Persistence/PersistentWhiteListAddress.h"
    "Common/Persistence/PreSaveLimitationsCheck.h"
    "Common/SQL/ColumnPositionCache.h"
    "Common/SQL/DALConnection.h"
    "Common/SQL/DALConnectionFactory.h"
    "Common/SQL/DALRecordset.h"
    "Common/SQL/DALRecordsetFactory.h"
    "Common/SQL/DatabaseConnectionManager.h"
    "Common/SQL/DatabaseSettings.h"
    "Common/SQL/IPAddressSQLHelper.h"
    "Common/SQL/Macros/IMacroExpander.h"
    "Common/SQL/Macros/Macro.h"
    "Common/SQL/Macros/MacroParser.h"
    "Common/SQL/Macros/PGSQLMacroExpander.h"
    "Common/SQL/PGConnection.h"
    "Common/SQL/PGRecordset.h"
    "Common/SQL/Prerequisites/IPrerequisite.h"
    "Common/SQL/Prerequisites/PreReqNoDuplicateFolders.h"
    "Common/SQL/Prerequisites/PrerequisiteList.h"
    "Common/SQL/SQLCommand.h"
    "Common/SQL/SQLParameter.h"
    "Common/SQL/SQLScriptParser.h"
    "Common/SQL/SQLScriptRunner.h"
    "Common/SQL/SQLStatement.h"
    "Common/TCPIP/CertificateVerifier.h"
    "Common/TCPIP/CipherInfo.h"
    "Common/TCPIP/DNSRecord.h"
    "Common/TCPIP/DNSResolver.h"
    "Common/TCPIP/DNSResolverWinApi.h"
    "Common/TCPIP/HostNameAndIpAddress.h"
    "Common/TCPIP/hRMS/hRMS_Domains.h"
    "Common/TCPIP/hRMS/hRMS_server_main.h"
    "Common/TCPIP/IOOperation.h"
    "Common/TCPIP/IOOperationQueue.h"
    "Common/TCPIP/IOQueueWorkerTask.h"
    "Common/TCPIP/IOService.h"
    "Common/TCPIP/IPAddress.h"
    "Common/TCPIP/LocalIPAddresses.h"
    "Common/TCPIP/SocketConstants.h"
    "Common/TCPIP/SslContextInitializer.h"
    "Common/TCPIP/SynchronousConnection.h"
    "Common/TCPIP/TCPConnection.h"
    "Common/TCPIP/TCPConnectionFactory.h"
    "Common/TCPIP/TCPServer.h"
    "Common/Threading/AsynchronousTask.h"
    "Common/Threading/Task.h"
    "Common/Threading/WorkQueue.h"
    "Common/Threading/WorkQueueManager.h"
    "Common/Tracking/ChangeNotification.h"
    "Common/Tracking/NotificationClient.h"
    "Common/Tracking/NotificationClientSubscription.h"
    "Common/Tracking/NotificationServer.h"
    "Common/Util/AccountLogon.h"
    "Common/Util/AWStats.h"
    "Common/Util/BlowFish.h"
    "Common/Util/ByteBuffer.h"
    "Common/Util/Charset.h"
    "Common/Util/Crypt.h"
    "Common/Util/EmailAllUsers.h"
    "Common/Util/Encoding/Base64.h"
    "Common/Util/Encoding/ModifiedUTF7.h"
    "Common/Util/Event.h"
    "Common/Util/EventTester.h"
    "Common/Util/ExceptionLogger.h"
    "Common/Util/File.h"
    "Common/Util/FileInfo.h"
    "Common/Util/FileUtilities.h"
    "Common/Util/FolderManipulationLock.h"
    "Common/Util/GUIDCreator.h"
    "Common/Util/Hashing/HashCreator.h"
    "Common/Util/HTTPClient.h"
    "Common/Util/MailerDaemonAddressDeterminer.h"
    "Common/Util/Math.h"
    "Common/Util/MessageAttachmentStripper.h"
    "Common/Util/MessageUtilities.h"
    "Common/Util/Parsing/AddresslistParser.h"
    "Common/Util/Parsing/StringParser.h"
    "Common/Util/Parsing/StringTreeParser.h"
    "Common/Util/PasswordGenerator.h"
    "Common/Util/PasswordRemover.h"
    "Common/Util/PasswordValidator.h"
    "Common/Util/RegularExpression.h"
    "Common/Util/runtime_variables.h"
    "Common/Util/ServerInfo.h"
    "Common/Util/ServerStatus.h"
    "Common/Util/SignatureAdder.h"
    "Common/Util/Singleton.h"
    "Common/Util/StdString.h"
    "Common/Util/Strings/FormatArgument.h"
    "Common/Util/Strings/Formatter.h"
    "Common/Util/Time.h"
    "Common/Util/TLD.h"
    "Common/Util/TraceHeaderWriter.h"
    "Common/Util/TransparentTransmissionBuffer.h"
    "Common/Util/Unicode.h"
    "Common/Util/Utilities.h"
    "Common/Util/VariantDateTime.h"
    "Common/Util/XMLite.h"
    "ExternalFetcher/ExternalFetch.h"
    "ExternalFetcher/ExternalFetchManager.h"
    "ExternalFetcher/ExternalFetchTask.h"
    "ExternalFetcher/FetchAccountUIDList.h"
    "ExternalFetcher/POP3ClientConnection.h"
    "IMAP/FolderListCreator.h"
    "IMAP/IMAPACLHelper.h"
    "IMAP/IMAPCommand.h"
    "IMAP/IMAPCommandAppend.h"
    "IMAP/IMAPCommandAuthenticate.h"
    "IMAP/IMAPCommandCapability.h"
    "IMAP/IMAPCommandCheck.h"
    "IMAP/IMAPCommandClose.h"
    "IMAP/IMAPCommandCopy.h"
    "IMAP/IMAPCommandCreate.h"
    "IMAP/IMAPCommandDelete.h"
    "IMAP/IMAPCommandDeleteAcl.h"
    "IMAP/IMAPCommandExamine.h"
    "IMAP/IMAPCommandExpunge.h"
    "IMAP/IMAPCommandFetch.h"
    "IMAP/IMAPCommandGetAcl.h"
    "IMAP/IMAPCommandGetQuota.h"
    "IMAP/IMAPCommandGetQuotaRoot.h"
    "IMAP/IMAPCommandIdle.h"
    "IMAP/IMAPCommandList.h"
    "IMAP/IMAPCommandListRights.h"
    "IMAP/IMAPCommandLogin.h"
    "IMAP/IMAPCommandLogout.h"
    "IMAP/IMAPCommandLSUB.h"
    "IMAP/IMAPCommandMyRights.h"
    "IMAP/IMAPCommandNamespace.h"
    "IMAP/IMAPCommandRangeAction.h"
    "IMAP/IMAPCommandRename.h"
    "IMAP/IMAPCommandSearch.h"
    "IMAP/IMAPCommandSelect.h"
    "IMAP/IMAPCommandSetAcl.h"
    "IMAP/IMAPCommandStartTls.h"
    "IMAP/IMAPCommandStatus.h"
    "IMAP/IMAPCommandStore.h"
    "IMAP/IMAPCommandSubscribe.h"
    "IMAP/IMAPCommandUID.h"
    "IMAP/IMAPCommandUnsubscribe.h"
    "IMAP/IMAPConfiguration.h"
    "IMAP/IMAPConnection.h"
    "IMAP/IMAPCopy.h"
    "IMAP/IMAPFetch.h"
    "IMAP/IMAPFetchParser.h"
    "IMAP/IMAPFolderContainer.h"
    "IMAP/IMAPFolderUtilities.h"
    "IMAP/IMAPListLookup.h"
    "IMAP/IMAPNotificationClient.h"
    "IMAP/IMAPResult.h"
    "IMAP/IMAPSearchParser.h"
    "IMAP/IMAPSimpleCommandParser.h"
    "IMAP/IMAPSort.h"
    "IMAP/IMAPSortParser.h"
    "IMAP/IMAPStore.h"
    "IMAP/MessagesContainer.h"
    "IMAP/StaticIMAPCommandHandlers.h"
    "POP3/POP3Configuration.h"
    "POP3/POP3Connection.h"
    "POP3/POP3Sessions.h"
    "SMTP/BLCheck.h"
    "SMTP/DeliveryQueue.h"
    "SMTP/DeliveryTask.h"
    "SMTP/ExternalDelivery.h"
    "SMTP/ExternalDeliveryServerResult.h"
    "SMTP/GreyListCleanerTask.h"
    "SMTP/GreyListing.h"
    "SMTP/LocalDelivery.h"
    "SMTP/MirrorMessage.h"
    "SMTP/PlusAddressing.h"
    "SMTP/RecipientParser.h"
    "SMTP/RuleApplier.h"
    "SMTP/RuleResult.h"
    "SMTP/ServerTargetResolver.h"
    "SMTP/SMTPClientConnection.h"
    "SMTP/SMTPConfiguration.h"
    "SMTP/SMTPConnection.h"
    "SMTP/SMTPDeliverer.h"
    "SMTP/SMTPDeliveryManager.h"
    "SMTP/SMTPForwarding.h"
    "SMTP/SMTPMessageHeaderCreator.h"
    "SMTP/SMTPVacationMessageCreator.h"
    "SMTP/SMTPVirusNotifier.h"
    "SMTP/SPF/Rmspf.h"
    "SMTP/SPF/SPF.h"
    "Start/pch.h"

)

# List of Quellcode files
set(SOURCE_FILES
    "COMMON/AntiSpam/AntiSpamConfiguration.cpp"
    "COMMON/AntiSpam/DKIM/Canonicalization.cpp"
    "COMMON/AntiSpam/DKIM/DKIM.cpp"
    "COMMON/AntiSpam/DKIM/DKIMParameters.cpp"
    "COMMON/AntiSpam/DKIM/DKIMSigner.cpp"
    "COMMON/AntiSpam/DKIM/SpamTestDKIM.cpp"
    "COMMON/AntiSpam/SpamAssassin/SpamAssassinClient.cpp"
    "COMMON/AntiSpam/SpamAssassin/SpamAssassinTestConnect.cpp"
    "COMMON/AntiSpam/SpamProtection.cpp"
    "COMMON/AntiSpam/SpamTest.cpp"
    "COMMON/AntiSpam/SpamTestData.cpp"
    "COMMON/AntiSpam/SpamTestDNSBlackLists.cpp"
    "COMMON/AntiSpam/SpamTestHeloHost.cpp"
    "COMMON/AntiSpam/SpamTestMXRecords.cpp"
    "COMMON/AntiSpam/SpamTestPTR.cpp"
    "COMMON/AntiSpam/SpamTestResult.cpp"
    "COMMON/AntiSpam/SpamTestRunner.cpp"
    "COMMON/AntiSpam/SpamTestSpamAssassin.cpp"
    "COMMON/AntiSpam/SpamTestSPF.cpp"
    "COMMON/AntiSpam/SpamTestSURBL.cpp"
    "COMMON/AntiSpam/SURBL.cpp"
    "COMMON/AntiSpam/WhiteListCache.cpp"
    "COMMON/AntiVirus/AntiVirusConfiguration.cpp"
    "COMMON/AntiVirus/ClamAVVirusScanner.cpp"
    "COMMON/AntiVirus/ClamWinVirusScanner.cpp"
    "COMMON/AntiVirus/CustomVirusScanner.cpp"
    "COMMON/AntiVirus/VirusScanner.cpp"
    "COMMON/AntiVirus/VirusScannerTester.cpp"
    "COMMON/AntiVirus/VirusScanningResult.cpp"
    "COMMON/Application/ACLManager.cpp"
    "COMMON/Application/Application.cpp"
    "COMMON/Application/Configuration.cpp"
    "COMMON/Application/DefaultDomain.cpp"
    "COMMON/Application/Dictionary.cpp"
    "COMMON/Application/ErrorManager.cpp"
    "COMMON/Application/ExceptionHandler.cpp"
    "COMMON/Application/FolderManager.cpp"
    "COMMON/Application/IniFileSettings.cpp"
    "COMMON/Application/Logger.cpp"
    "COMMON/Application/MessageIndexer.cpp"
    "COMMON/Application/ObjectCache.cpp"
    "COMMON/Application/Property.cpp"
    "COMMON/Application/PropertySet.cpp"
    "COMMON/Application/Reinitializator.cpp"
    "COMMON/Application/RemoveExpiredRecords.cpp"
    "COMMON/Application/Scheduler.cpp"
    "COMMON/Application/SessionManager.cpp"
    "COMMON/Application/TimeoutCalculator.cpp"
    "COMMON/BO/Account.cpp"
    "COMMON/BO/Accounts.cpp"
    "COMMON/BO/ACLPermission.cpp"
    "COMMON/BO/ACLPermissions.cpp"
    "COMMON/BO/Alias.cpp"
    "COMMON/BO/Aliases.cpp"
    "COMMON/BO/Attachment.cpp"
    "COMMON/BO/Attachments.cpp"
    "COMMON/BO/BlockedAttachment.cpp"
    "COMMON/BO/BlockedAttachments.cpp"
    "COMMON/BO/DistributionList.cpp"
    "COMMON/BO/DistributionListRecipient.cpp"
    "COMMON/BO/DistributionListRecipients.cpp"
    "COMMON/BO/DistributionLists.cpp"
    "COMMON/BO/DNSBlackList.cpp"
    "COMMON/BO/DNSBlackLists.cpp"
    "COMMON/BO/Domain.cpp"
    "COMMON/BO/DomainAlias.cpp"
    "COMMON/BO/DomainAliases.cpp"
    "COMMON/BO/Domains.cpp"
    "COMMON/BO/FetchAccount.cpp"
    "COMMON/BO/FetchAccounts.cpp"
    "COMMON/BO/FetchAccountUID.cpp"
    "COMMON/BO/FetchAccountUIDs.cpp"
    "COMMON/BO/GreyListingWhiteAddress.cpp"
    "COMMON/BO/GreyListingWhiteAddresses.cpp"
    "COMMON/BO/GreyListTriplet.cpp"
    "COMMON/BO/Group.cpp"
    "COMMON/BO/GroupMember.cpp"
    "COMMON/BO/GroupMembers.cpp"
    "COMMON/BO/Groups.cpp"
    "COMMON/BO/IMAPFolder.cpp"
    "COMMON/BO/IMAPFolders.cpp"
    "COMMON/BO/IncomingRelay.cpp"
    "COMMON/BO/IncomingRelays.cpp"
    "COMMON/BO/Message.cpp"
    "COMMON/BO/MessageData.cpp"
    "COMMON/BO/MessageMetaData.cpp"
    "COMMON/BO/MessageRecipient.cpp"
    "COMMON/BO/MessageRecipients.cpp"
    "COMMON/BO/Messages.cpp"
    "COMMON/BO/Route.cpp"
    "COMMON/BO/RouteAddress.cpp"
    "COMMON/BO/RouteAddresses.cpp"
    "COMMON/BO/Routes.cpp"
    "COMMON/BO/Rule.cpp"
    "COMMON/BO/RuleAction.cpp"
    "COMMON/BO/RuleActions.cpp"
    "COMMON/BO/RuleCriteria.cpp"
    "COMMON/BO/RuleCriterias.cpp"
    "COMMON/BO/Rules.cpp"
    "COMMON/BO/ScheduledTask.cpp"
    "COMMON/BO/ScheduledTask.cpp"
    "COMMON/BO/SecurityRange.cpp"
    "COMMON/BO/SecurityRanges.cpp"
    "COMMON/BO/ServerMessage.cpp"
    "COMMON/BO/ServerMessages.cpp"
    "COMMON/BO/SSLCertificate.cpp"
    "COMMON/BO/SSLCertificates.cpp"
    "COMMON/BO/SURBLServer.cpp"
    "COMMON/BO/SURBLServers.cpp"
    "COMMON/BO/TCPIPPort.cpp"
    "COMMON/BO/TCPIPPorts.cpp"
    "COMMON/BO/WhiteListAddress.cpp"
    "COMMON/BO/WhiteListAddresses.cpp"
    "COMMON/Cache/AccountSizeCache.cpp"
    "COMMON/Cache/CacheConfiguration.cpp"
    "COMMON/Cache/CacheContainer.cpp"
    "COMMON/Cache/InboxIDCache.cpp"
    "COMMON/Cache/MessageCache.cpp"
    "COMMON/Mime/CodePages.cpp"
    "COMMON/Mime/Mime.cpp"
    "COMMON/Mime/MimeChar.cpp"
    "COMMON/Mime/MimeCode.cpp"
    "COMMON/Mime/MimeTester.cpp"
    "COMMON/Mime/MimeType.cpp"
    "COMMON/Persistence/Maintenance/Maintenance.cpp"
    "COMMON/Persistence/NameChanger.cpp"
    "COMMON/Persistence/PersistentAccount.cpp"
    "COMMON/Persistence/PersistentACLPermission.cpp"
    "COMMON/Persistence/PersistentAlias.cpp"
    "COMMON/Persistence/PersistentBlockedAttachment.cpp"
    "COMMON/Persistence/PersistentDistributionList.cpp"
    "COMMON/Persistence/PersistentDistributionListRecipient.cpp"
    "COMMON/Persistence/PersistentDNSBlacklist.cpp"
    "COMMON/Persistence/PersistentDomain.cpp"
    "COMMON/Persistence/PersistentDomainAlias.cpp"
    "COMMON/Persistence/PersistentFetchAccount.cpp"
    "COMMON/Persistence/PersistentFetchAccountUID.cpp"
    "COMMON/Persistence/PersistentGreyList.cpp"
    "COMMON/Persistence/PersistentGreyListingWhiteAddress.cpp"
    "COMMON/Persistence/PersistentGroup.cpp"
    "COMMON/Persistence/PersistentGroupMember.cpp"
    "COMMON/Persistence/PersistentIMAPFolder.cpp"
    "COMMON/Persistence/PersistentIncomingRelay.cpp"
    "COMMON/Persistence/PersistentLogonFailure.cpp"
    "COMMON/Persistence/PersistentMessage.cpp"
    "COMMON/Persistence/PersistentMessageMetaData.cpp"
    "COMMON/Persistence/PersistentMessageRecipient.cpp"
    "COMMON/Persistence/PersistentRoute.cpp"
    "COMMON/Persistence/PersistentRouteAddress.cpp"
    "COMMON/Persistence/PersistentRule.cpp"
    "COMMON/Persistence/PersistentRuleAction.cpp"
    "COMMON/Persistence/PersistentRuleCriteria.cpp"
    "COMMON/Persistence/PersistentSecurityRange.cpp"
    "COMMON/Persistence/PersistentServerMessage.cpp"
    "COMMON/Persistence/PersistentSURBLServer.cpp"
    "COMMON/Persistence/PersistentTCPIPPort.cpp"
    "COMMON/Persistence/PersistentWhiteListAddress.cpp"
    "COMMON/Persistence/PreSaveLimitationsCheck.cpp"
    "COMMON/SQL/ColumnPositionCache.cpp"
    "COMMON/SQL/DALConnection.cpp"
    "COMMON/SQL/DALConnectionFactory.cpp"
    "COMMON/SQL/DALRecordset.cpp"
    "COMMON/SQL/DALRecordsetFactory.cpp"
    "COMMON/SQL/DatabaseConnectionManager.cpp"
    "COMMON/SQL/DatabaseSettings.cpp"
    "COMMON/SQL/IPAddressSQLHelper.cpp"
    "COMMON/SQL/Macros/Macro.cpp"
    "COMMON/SQL/Macros/MacroParser.cpp"
    "COMMON/SQL/Macros/PGSQLMacroExpander.cpp"
    "COMMON/SQL/PGConnection.cpp"
    "COMMON/SQL/PGRecordset.cpp"
    "COMMON/SQL/Prerequisites/PreReqNoDuplicateFolders.cpp"
    "COMMON/SQL/Prerequisites/PrerequisiteList.cpp"
    "COMMON/SQL/SQLCommand.cpp"
    "COMMON/SQL/SQLParameter.cpp"
    "COMMON/SQL/SQLScriptParser.cpp"
    "COMMON/SQL/SQLScriptRunner.cpp"
    "COMMON/SQL/SQLStatement.cpp"
    "COMMON/TCPIP/CertificateVerifier.cpp"
    "COMMON/TCPIP/DNSRecord.cpp"
    "COMMON/TCPIP/DNSResolver.cpp"
    "COMMON/TCPIP/HostNameAndIpAddress.cpp"
    "COMMON/TCPIP/hRMS/hRMS_Domains.cpp"
    "COMMON/TCPIP/hRMS/hRMS_server_main.cpp"
    "COMMON/TCPIP/IOOperation.cpp"
    "COMMON/TCPIP/IOOperationQueue.cpp"
    "COMMON/TCPIP/IOQueueWorkerTask.cpp"
    "COMMON/TCPIP/IOService.cpp"
    "COMMON/TCPIP/IPAddress.cpp"
    "COMMON/TCPIP/LocalIPAddresses.cpp"
    "COMMON/TCPIP/SslContextInitializer.cpp"
    "COMMON/TCPIP/SynchronousConnection.cpp"
    "COMMON/TCPIP/TCPConnection.cpp"
    "COMMON/TCPIP/TCPConnectionFactory.cpp"
    "COMMON/TCPIP/TCPServer.cpp"
    "COMMON/Threading/Task.cpp"
    "COMMON/Threading/WorkQueue.cpp"
    "COMMON/Threading/WorkQueueManager.cpp"
    "COMMON/Tracking/ChangeNotification.cpp"
    "COMMON/Tracking/NotificationClient.cpp"
    "COMMON/Tracking/NotificationClientSubscription.cpp"
    "COMMON/Tracking/NotificationServer.cpp"
    "COMMON/Util/AccountLogon.cpp"
    "COMMON/Util/AWStats.cpp"
    "COMMON/Util/BlowFish.cpp"
    "COMMON/Util/ByteBuffer.cpp"
    "COMMON/Util/Charset.cpp"
    "COMMON/Util/Crypt.cpp"
    "COMMON/Util/EmailAllUsers.cpp"
    "COMMON/Util/Encoding/Base64.cpp"
    "COMMON/Util/Encoding/ModifiedUTF7.cpp"
    "COMMON/Util/Event.cpp"
    "COMMON/Util/EventTester.cpp"
    "COMMON/Util/ExceptionLogger.cpp"
    "COMMON/Util/File.cpp"
    "COMMON/Util/FileInfo.cpp"
    "COMMON/Util/FolderManipulationLock.cpp"
    "COMMON/Util/GUIDCreator.cpp"
    "COMMON/Util/Hashing/HashCreator.cpp"
    "COMMON/Util/HTTPClient.cpp"
    "COMMON/Util/MailerDaemonAddressDeterminer.cpp"
    "COMMON/Util/Math.cpp"
    "COMMON/Util/MessageAttachmentStripper.cpp"
    "COMMON/Util/MessageUtilities.cpp"
    "COMMON/Util/Parsing/AddresslistParser.cpp"
    "COMMON/Util/Parsing/StringParser.cpp"
    "COMMON/Util/Parsing/StringTreeParser.cpp"
    "COMMON/Util/PasswordGenerator.cpp"
    "COMMON/Util/PasswordRemover.cpp"
    "COMMON/Util/PasswordValidator.cpp"
    "COMMON/Util/RegularExpression.cpp"
    "COMMON/Util/runtime_variables.cpp"
    "COMMON/Util/ServerInfo.cpp"
    "COMMON/Util/ServerStatus.cpp"
    "COMMON/Util/SignatureAdder.cpp"
    "COMMON/Util/Strings/FormatArgument.cpp"
    "COMMON/Util/Strings/Formatter.cpp"
    "COMMON/Util/Time.cpp"
    "COMMON/Util/TLD.cpp"
    "COMMON/Util/TraceHeaderWriter.cpp"
    "COMMON/Util/TransparentTransmissionBuffer.cpp"
    "COMMON/Util/Unicode.cpp"
    "COMMON/Util/Utilities.cpp"
    "COMMON/Util/VariantDateTime.cpp"
    "COMMON/Util/XMLite.cpp"
    "ExternalFetcher/ExternalFetch.cpp"
    "ExternalFetcher/ExternalFetchManager.cpp"
    "ExternalFetcher/ExternalFetchTask.cpp"
    "ExternalFetcher/FetchAccountUIDList.cpp"
    "ExternalFetcher/POP3ClientConnection.cpp"
    "IMAP/FolderListCreator.cpp"
    "IMAP/IMAPACLHelper.cpp"
    "IMAP/IMAPCommand.cpp"
    "IMAP/IMAPCommandAppend.cpp"
    "IMAP/IMAPCommandAuthenticate.cpp"
    "IMAP/IMAPCommandCapability.cpp"
    "IMAP/IMAPCommandCheck.cpp"
    "IMAP/IMAPCommandClose.cpp"
    "IMAP/IMAPCommandCopy.cpp"
    "IMAP/IMAPCommandCreate.cpp"
    "IMAP/IMAPCommandDelete.cpp"
    "IMAP/IMAPCommandDeleteAcl.cpp"
    "IMAP/IMAPCommandExamine.cpp"
    "IMAP/IMAPCommandExpunge.cpp"
    "IMAP/IMAPCommandFetch.cpp"
    "IMAP/IMAPCommandGetAcl.cpp"
    "IMAP/IMAPCommandGetQuota.cpp"
    "IMAP/IMAPCommandGetQuotaRoot.cpp"
    "IMAP/IMAPCommandIdle.cpp"
    "IMAP/IMAPCommandList.cpp"
    "IMAP/IMAPCommandListRights.cpp"
    "IMAP/IMAPCommandLogin.cpp"
    "IMAP/IMAPCommandLogout.cpp"
    "IMAP/IMAPCommandLSUB.CPP"
    "IMAP/IMAPCommandMyRights.cpp"
    "IMAP/IMAPCommandNamespace.cpp"
    "IMAP/IMAPCommandRangeAction.cpp"
    "IMAP/IMAPCommandRename.cpp"
    "IMAP/IMAPCommandSearch.cpp"
    "IMAP/IMAPCommandSelect.cpp"
    "IMAP/IMAPCommandSetAcl.cpp"
    "IMAP/IMAPCommandStartTls.cpp"
    "IMAP/IMAPCommandStatus.cpp"
    "IMAP/IMAPCommandStore.cpp"
    "IMAP/IMAPCommandSubscribe.cpp"
    "IMAP/IMAPCommandUID.cpp"
    "IMAP/IMAPCommandUnsubscribe.cpp"
    "IMAP/IMAPConfiguration.cpp"
    "IMAP/IMAPConnection.cpp"
    "IMAP/IMAPCopy.cpp"
    "IMAP/IMAPFetch.cpp"
    "IMAP/IMAPFetchParser.cpp"
    "IMAP/IMAPFolderContainer.cpp"
    "IMAP/IMAPFolderUtilities.cpp"
    "IMAP/IMAPListLookup.cpp"
    "IMAP/IMAPNotificationClient.cpp"
    "IMAP/IMAPResult.cpp"
    "IMAP/IMAPSearchParser.cpp"
    "IMAP/IMAPSimpleCommandParser.cpp"
    "IMAP/IMAPSort.cpp"
    "IMAP/IMAPSortParser.cpp"
    "IMAP/IMAPStore.cpp"
    "IMAP/MessagesContainer.cpp"
    "IMAP/StaticIMAPCommandHandlers.cpp"
    "POP3/POP3Configuration.cpp"
    "POP3/POP3Connection.cpp"
    "POP3/POP3Sessions.cpp"
    "SMTP/BLCheck.cpp"
    "SMTP/DeliveryQueue.cpp"
    "SMTP/DeliveryTask.cpp"
    "SMTP/ExternalDelivery.cpp"
    "SMTP/GreyListCleanerTask.cpp"
    "SMTP/GreyListing.cpp"
    "SMTP/LocalDelivery.cpp"
    "SMTP/MirrorMessage.cpp"
    "SMTP/PlusAddressing.cpp"
    "SMTP/RecipientParser.cpp"
    "SMTP/RuleApplier.cpp"
    "SMTP/RuleResult.cpp"
    "SMTP/ServerTargetResolver.cpp"
    "SMTP/SMTPClientConnection.cpp"
    "SMTP/SMTPConfiguration.cpp"
    "SMTP/SMTPConnection.cpp"
    "SMTP/SMTPDeliverer.cpp"
    "SMTP/SMTPDeliveryManager.cpp"
    "SMTP/SMTPForwarding.cpp"
    "SMTP/SMTPMessageHeaderCreator.cpp"
    "SMTP/SMTPVacationMessageCreator.cpp"
    "SMTP/SMTPVirusNotifier.cpp"
    "SMTP/SPF/RMSPF.cpp"
    "SMTP/SPF/SPF.cpp"
    "Start/pch.cpp"
    "Start/hMailServerX.cpp"
)

# Add source to this project's executable.
add_executable(hMailServerX
    
    ${HEADER_FILES} # Verweisen auf die Header-Dateien
    ${SOURCE_FILES} # Verweisen auf die Quellcode-Dateien
)

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET hMailServerX PROPERTY CXX_STANDARD 20)
endif()

# Link OpenSSL libraries to your executable
target_link_libraries(hMailServerX PRIVATE OpenSSL::SSL OpenSSL::Crypto)

# Include BOOST headers
target_include_directories(hMailServerX PRIVATE ${Boost_INCLUDE_DIRS})

# Link BOOST libraries (z.B. BOOST Thread)
find_package(Boost COMPONENTS thread REQUIRED)
target_link_libraries(hMailServerX PRIVATE ${Boost_LIBRARIES})
